- Стили переписаны на REM

--- a/src/common/root.less
+++ b/src/common/root.less
@@ -12,18 +12,18 @@
   --font-oswald: oswald, sans-serif;
   --font-color-dark: #202020;
   --font-color-light: #fff;
-  --font-size-xs: 12px;
-  --font-size-s: 14px;
-  --font-size-m: 16px;
-  --font-size-l: 18px;
-  --font-size-xl: 22px;
-  --font-size-xxl: 24px;
-  --font-size-xxxl: 32px;
-  --font-size-xxxxl: 48px;
-  --font-size-xxxxxl: 72px;
-  --font-size-xxxxxxl: 92px;
-  --border-radius-default: 30px;
-  --border-radius-large: 70px;
+  --font-size-xs: calcrem(12);
+  --font-size-s: calcrem(14);
+  --font-size-m: calcrem(16);
+  --font-size-l: calcrem(18);
+  --font-size-xl: calcrem(22);
+  --font-size-xxl: calcrem(24);
+  --font-size-xxxl: calcrem(32);
+  --font-size-xxxxl: calcrem(48);
+  --font-size-xxxxxl: calcrem(72);
+  --font-size-xxxxxxl: calcrem(92);
+  --border-radius-default: calcrem(30);
+  --border-radius-large: calcrem(70);
   --mobile-break-point: 768px;
   --tablet-break-point: 1024px;
 }
