--- a/src/components/horizontal-scroll/index.less
+++ b/src/components/horizontal-scroll/index.less
@@ -4,25 +4,25 @@
   position: relative;
 
   &__cards {
-    padding: 50px;
-    margin: -50px -100px;
+    padding: calcrem(50);
+    margin:  calcrem(-50)  calcrem(-100);
 
     .mobile-screen({
-      margin: -50px -30px;
+      margin:  calcrem(-50)  calcrem(-30);
     });
   }
 
   &__control {
     position: absolute;
     z-index: 100;
-    top: calc(50% - 64px);
-    width: 64px;
-    height: 64px;
-    padding: 20px;
+    top: calc(50% - calcrem(64));
+    width: calcrem(64);
+    height: calcrem(64);
+    padding: calcrem(20);
     background-image: url("../../icons/down.svg");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 64px;
+    background-size: calcrem(64);
     opacity: 0.5;
 
     .mobile-screen({
