--- a/src/components/page/index.less
+++ b/src/components/page/index.less
@@ -2,7 +2,7 @@
 
 .page {
   display: flex;
-  min-width: 360px;
+  min-width: calcrem(360);
   flex-direction: column;
 
   &__block {
@@ -11,7 +11,7 @@
 
     &_main {
       display: flex;
-      height: 712px;
+      height: calcrem(712);
       align-items: flex-end;
       background: linear-gradient(90deg, rgb(32 32 32 / 40%) 49.04%, rgb(32 32 32 / 0%) 100%), url("../../images/1-block.png") lightgray 50% / cover no-repeat;
 
@@ -30,27 +30,27 @@
 
       &::after {
         position: absolute;
-        top: -80px;
-        right: -320px;
+        top:  calcrem(-80);
+        right: calcrem(-320);
         display: block;
         width: 100%;
-        height: 600px;
+        height: calcrem(600);
         background-color: var(--color-secondary);
         background-repeat: no-repeat;
         content: ' ';
         mask-image: url("../../icons/big-arcs-4back.svg");
         mask-position: center;
         mask-repeat: no-repeat;
-        mask-size: 600px, 600px;
+        mask-size: calcrem(600), calcrem(600);
         pointer-events: none;
 
        .mobile-screen({
-         top: -65px;
-         right: -180px;
+         top:  calcrem(-65);
+         right: calcrem(-180);
          display: block;
-         width: 600px;
-         height: 600px;
-         mask-size: 500px, 500px;
+         width: calcrem(600);
+         height: calcrem(600);
+         mask-size: calcrem(-500), calcrem(-500);
         });
       }
     }
@@ -107,10 +107,10 @@
   }
 
   &__content {
-    padding: 70px 100px;
+    padding: calcrem(70) calcrem(100);
 
     .mobile-screen({
-      padding: 40px 30px;
+      padding: calcrem(40) calcrem(30);
     });
 
     &_centered {
@@ -123,16 +123,16 @@
       align-items: center;
       align-self: stretch;
       justify-content: center;
-      padding: 20px 10px;
-      gap: 10px;
+      padding: calcrem(20) calcrem(10);
+      gap: calcrem(10);
       .mobile-screen({
-        padding: 15px 40px;
+        padding: calcrem(15) calcrem(40);
       });
 
     }
 
     &_video {
-      padding: 10px 0;
+      padding: calcrem(10) 0;
     }
   }
 }
