--- a/src/components/block-offer/index.less
+++ b/src/components/block-offer/index.less
@@ -42,9 +42,9 @@
 
     &__text {
       position: absolute;
-      top: caclrem(-48);
-      left: caclrem(-80);
-      width: caclrem(154);
+      top: calcrem(-48);
+      left: calcrem(-80);
+      width: calcrem(154);
       padding: calcrem(25) calcrem(30);
       border-radius: var(--border-radius-default);
       background: var(--color-secondary);
