--- a/src/components/block-offer/index.less
+++ b/src/components/block-offer/index.less
@@ -20,8 +20,9 @@
     line-height: 90%; /* 64.8px */;
 
     .mobile-screen({
-      width: auto;
+      width: calcrem(258);
       font-size: var(--font-size-xxxl);
+      margin-bottom: 30px;
     });
   }
 
